Add info about relaunching with--add-modules=jdk.incubator.vector